Count up parent's obytes and omcasts counters

PR kern/49837